--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,4 +1,4 @@
-<form aciton = "/bookmarks" method = "post">
-<input type="text" name="url"/>
-<input type="submit" value="Submit"/>
+<form action="/bookmarks" method="post">
+  <input type="text" name="url" />
+  <input type="submit" value="Submit" />
 </form>
